# meeting-attendance-organizer

./: Dockerfile  Makefile  README.md  app.py  pyproject.toml  ui.py
src/maorganizer/: datawrangling.py  ui.py
tests/: test_attendancelist.py  test_datawrangling.py
