[tool.poetry]
name = "maorganizer"
version = "0.1.0"
description = ""
authors = ["Jessica Walkenhorst <walkenho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
streamlit = "^1.17.0"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
